# p6flow

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
fixtures/: synthetic_v2212.xer
scripts/: batch_process.py  codegen.py  make_synthetic_fixture.py  schema_drift_report.py
src/p6flow/: __init__.py  calendar.py  cli.py  ddl.py  inference.py  loader.py  output.py  schema.py  tokenizer.py  udf.py  validate.py
tests/: test_calendar.py  test_inference.py  test_load.py  test_robustness.py  test_udf.py  test_validate.py
