[project]
name = "p6flow"
version = "0.1.0"
description = "Parse Primavera P6 XER files into typed Snowflake-loadable Parquet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15",
    "click>=8.1",
]

[project.scripts]
p6flow = "p6flow.cli:parse"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p6flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/p6flow/schema.py", "scripts/cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
