[project]
name = "p6flow"
version = "0.1.1"
description = "Parse Primavera P6 XER files into typed Snowflake-loadable Parquet."
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSE-GPL"]
authors = [{ name = "Will Truong" }]
keywords = [
    "primavera",
    "p6",
    "xer",
    "parquet",
    "snowflake",
    "scheduling",
    "project-management",
    "etl",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15",
    "click>=8.1",
]

[project.scripts]
p6flow = "p6flow.cli:parse"

[project.urls]
Homepage = "https://github.com/wllmtrng/p6flow"
Source = "https://github.com/wllmtrng/p6flow"
Issues = "https://github.com/wllmtrng/p6flow/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p6flow"]

[tool.hatch.build.targets.sdist]
include = [
    "src/p6flow",
    "tests",
    "fixtures/synthetic_v2212.xer",
    "scripts",
    "README.md",
    "LICENSE",
    "LICENSE-GPL",
    "Makefile",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/p6flow/schema.py", "scripts/cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
